--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@
     font-weight: 400;
 }
 :root{
-    --blackColor: rgba(16, 15, 15, 0.88);
+    --blackColor: #100F0F;
     --whiteColor:  #FFFFFF;
     --goldColor: rgba(193, 174, 105, 0.86);
 }
@@ -91,6 +91,15 @@ body{
 }
 .header__nav{
     padding-top: 60px;
+}
+.header__content-logo{
+    display: none;
+}
+.header__content-menu{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
 }
 .header_nav-link{
     font-family: 'Didot-Regular';
@@ -196,7 +205,7 @@ font-family: 'Didot-Regular';
 .anim_text{
     overflow: hidden;
     height: max-content;
-    transition: .5s;
+    transition:  1s;
 }
 .anim_text:not(:first-of-type){
     margin-bottom: 50px;
@@ -206,7 +215,7 @@ font-family: 'Didot-Regular';
 }
 .header__content-title.anim{
     transform: translateY(65px);
-    transition: .8s;
+    transition:  1s;
 }
 .header__content-title.anim.active{
     transform: translateY(0);
@@ -216,12 +225,15 @@ font-family: 'Didot-Regular';
 }
 .anim{
     display: flex;
-    transform: translateY(30px);
-    transition: .8s;
+    transform: translateY(65px);
+    transition:  1s;
+    transition-duration: 1s;
 }
 .anim.active{
+
     transform: translateY(0);
 }
+
 .header__title-elements:before{
     content: '';
     background: url(../images/title_decorations.png) no-repeat;
@@ -285,14 +297,29 @@ font-family: 'Didot-Regular';
 .main__content-text{
     font-size: 17px;
 line-height: 21px;
-background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
+/* background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%);
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
-background-clip: text;
+background-clip: text; */
 font-family: 'Didot-Regular';
 max-width: 270px;
 transform: translateY(60px);
 }
+/* .main__work-text .anim_text:nth-of-type(1) .main__content-text{
+    -webkit-text-fill-color: white;
+}
+.main__work-text .anim_text:nth-of-type(2) .main__content-text{
+    background: linear-gradient(180deg, #ffffff 0%, rgb(104 103 103) 100%);
+    -webkit-text-fill-color: #c7c3c3;
+    -webkit-background-clip: text;
+    background-clip: text;
+}
+.main__work-text .anim_text:nth-of-type(3) .main__content-text{
+    background: linear-gradient(180deg, #ffffff 0%, rgb(108 103 103) 100%);
+    -webkit-text-fill-color: #f1f1f12e;
+    -webkit-background-clip: text;
+    background-clip: text;
+} */
 .main__content-info{
     display: flex;
     align-items: center;
@@ -315,13 +342,41 @@ transform: translateY(60px);
     gap: 30px;
 }
 
-
+.main__content-description .anim_text:nth-of-type(2),
+.main__content-description .anim_text:nth-of-type(3){
+    margin-bottom: 0;
+}
 .main__awards-content{
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     position: relative;
 }
+.main__awards-lists{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 70px;
+    max-width: 500px;
+    width: 100%;
+    justify-content: space-between;
+    align-items: stretch;
+    padding-top: 75px;
+    padding-bottom: 30px;
+}
+.main__awards-list{
+    max-width: 120px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+}
+.main__awards-list img{
+    width: 30%;
+    object-fit: cover;
+}
+
 .main__awards-content:after{
     content: '';
     position: absolute;
@@ -438,9 +493,15 @@ transform: translateY(100px);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    gap: 50px;
+}
+.universe_logo{
+    margin-bottom: 50px;
+}
+.main__universe_about .anim_text{
+    margin-bottom: 15px;
 }
 .main__universe_about .main__content-text{
+  
     max-width: 300px;
     width: 100%;
 }
@@ -493,9 +554,13 @@ transform: translateY(100px);
 }
 .main__work-bottom{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-top: 16px;
+}
+.main__work-bottom .anim_text{
+    margin-bottom: 25px;
 }
 .main__work-content{
     padding-bottom: 75px;
@@ -565,6 +630,9 @@ transform: translateY(100px);
     text-align: right;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
+.main__work-text .anim_text{
+    margin-bottom: 15px;
+}
 .main__slider-logos{
     margin-top: 210px;
 }
@@ -630,18 +698,36 @@ transform: translateY(100px);
     background: linear-gradient(90.03deg, #646464 49.97%, rgba(217, 217, 217, 0) 107.34%);
 }
 .footer__contact-title{
-    display: flex;
-    flex-direction: column;
     font-size: 20px;
     line-height: 25px;
     font-family: 'Didot-Regular';
     width: 45%;
 }
-
+.footer__contact-title .anim_text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 .footer_contacts-link{
     font-size: 20px;
     line-height: 25px;
     font-family: 'Didot-Regular';
-    color: rgba(255, 255, 255, 0.5);
+    color: var(--whiteColor);
     margin-top: 15px;
+}
+.footer_contacts-link::after{
+    Left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2px;
+    content: '';
+    position: absolute;
+    background: #fcf6f4;
+    transform: scaleX(0);
+    transform-origin: center;
+    transition: transform 0.4s ease-out;
+}
+.footer_contacts-link:hover:after{
+    transform: scaleX(1);
+    transform-origin: center center;
 }
